--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -210,6 +210,11 @@
                                     <td th:text="${novedad.des}">Descripción</td>
                                     <td th:text="${novedad.precio}">Precio</td>
                                     <td>
+                                        <a href=""> <button type="button" class="boton btn-comprar">Información</button>
+                                        </a>
+
+                                    </td>
+                                    <td>
                                         <!--<input class="form-check-input" type="checkbox" id="compra">
                                     
                                         <label class="form-check-label" for="compra">Compra</label> -->
