--- a/src/main/resources/templates/html/onePiece/index.html
+++ b/src/main/resources/templates/html/onePiece/index.html
@@ -104,9 +104,14 @@
                                 <td th:text="${figuraOne.des}">Descripción</td>
                                 <td th:text="${figuraOne.precio}">Precio</td>
                                 <td>
+                                    <a href=""> <button type="button" class="boton btn-comprar">Información</button>
+                                    </a>
+
+                                </td>
+                                <td>
                                     <!--<input class="form-check-input" type="checkbox" id="compra">
-                                    
-                                        <label class="form-check-label" for="compra">Compra</label> -->
+                                
+                                    <label class="form-check-label" for="compra">Compra</label> -->
                                     <a href="">
 
                                         <button type="button" class="boton btn-comprar">Comprar</button>
