--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/tabla.css">
     <link rel="stylesheet" href="/css/carrusel.css">
+    <link rel="stylesheet" href="/css/comprarCarrito.css">
 
 
 
@@ -25,13 +26,13 @@
                     <li><a href="/faqs" class="nav-link px-2 text-white">FAQs</a></li>
                     <li><a href="/encabezado" class="nav-link px-2 text-white">Acerca</a></li>
 
-                    <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
+                    <li sec:authorize="isAuthenticated()" class="nav-item dropdown" th:each="usuario1: ${usuario}">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
 
 
                             <!--  mirar por que da error-->
-                            <!--  <span th:text="${#authentication.username}">Opciones</span> <span class="caret"></span> -->
+                            <span th:text="${usuario1.getNombre()}">Opciones</span> <span class="caret"></span>
                             <!--<span th:text="${#authentication.name}">Opciones</span>-->
                         </a>
                         <ul class="dropdown-menu">
@@ -67,12 +68,12 @@
 
 
                 <div class="text-end"  >
-                    <a href="/inicioSesion/login" class="btn btn-outline-light me-2">Iniciar sesion</a>
+                    <a href="/inicioSesion" class="btn btn-outline-light me-2">Iniciar sesion</a>
                 </div>
                 <div class="text-end">
 
 
-                    <a href="/registrar" class="btn btn-warning"> Registrar </a>
+                    <a href="/registrarse" class="btn btn-warning"> Registrar </a>
                     <!--    <form id="logoutForm" th:action="@{/usuario/logout}" method="post">
                     <button type="submit" class="btn btn-warning">
                         <i class="fas fa-sign-out-alt"></i> Exit
@@ -88,6 +89,20 @@
                    <span class="dropdown-item" th:text=" ' index: ' + ${session.numVisitasIndex}"></span>
            </div> -->
             </div>
+            <div id="cart" style="margin-right:20px;">
+                <i class="bi bi-cart"></i>
+                <span id="cartItemCount">0</span>
+            </div>
+
+            <div id="cartContainer" class="cart-container">
+                <h2>Carrito de Compras</h2>
+                <ul id="cartItems"></ul>
+                <div id="cartTotal">Total: $0.00</div>
+                <button id="btnComprar">Comprar</button>
+            </div>
+            
+
+
         </div>
     </header>
 
@@ -159,10 +174,11 @@
                                     <td th:text="${figura.des}">Descripción</td>
                                     <td th:text="${figura.precio}">Precio</td>
                                     <td>
-                                        <a href=""> <button type="button" class="boton btn-comprar">Información</button>
+                                        <a th:href="@{/detalle/{id}(id=${figura.id})}">
+                                            <button type="button" class="boton btn-comprar">Información</button>
                                         </a>
-
                                     </td>
+
                                     <td>
                                         <!--<input class="form-check-input" type="checkbox" id="compra">
                                     
@@ -320,6 +336,9 @@
     <script src="/js/carrusel.js"></script>
     <script src="/js/buscar.js"></script>
     <script src="/js/favoritos.js"></script>
+    <script src="/js/carritoComprar.js"></script>
+
+
 </body>
 
 </html>
