--- a/src/main/resources/templates/html/dragonBall/index.html
+++ b/src/main/resources/templates/html/dragonBall/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/caja-boostrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/dragonBall.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
     <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 
@@ -17,40 +18,7 @@
 
             /* Estilo para el texto del nombre de usuario */
 
-        footer {
-            background-color: #343a40;
-            color: #ffffff;
-            padding: 20px 0;
-        }
 
-        footer h5 {
-            margin-bottom: 20px;
-        }
-
-        footer ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        footer ul li {
-            margin-bottom: 10px;
-        }
-
-        footer ul li a {
-            color: #ffffff;
-            text-decoration: none;
-            transition: color 0.2s;
-        }
-
-        footer ul li a:hover {
-            color: #f8f9fa;
-        }
-
-        footer .text-center {
-            border-top: 1px solid #495057;
-            margin-top: 20px;
-            padding-top: 20px;
-        }
 
 
 
