--- a/src/main/resources/templates/html/encabezado/acercaEnca.html
+++ b/src/main/resources/templates/html/encabezado/acercaEnca.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/cambiarColoCabezera.css">
     <link rel="icon" href="/imagen/pestaña/corona.jpg" >
-
+    <link rel="stylesheet" href="/css/footer.css">
 
 
 
@@ -121,23 +121,37 @@
 
 <!--cambiar el th action con lo que ponga en el controlador-->
 <form th:action="@{/encabezadoPost}" method="post">
+    <div class="container" style="margin-top: 110px;">
+        <h1>Acerca de Nosotros</h1>
+        <p>Bienvenido a nuestra tienda de figuras de colección. Nos especializamos en ofrecer una amplia variedad de figuras de tus series, películas y videojuegos favoritos. Nuestro objetivo es proporcionar a los coleccionistas productos de alta calidad y un excelente servicio al cliente.</p>
 
-<div class="container-fluid" style="margin-top: 100px;">
-    <div class="card">
-        <div class="card-body">
+        <h2>Nuestra Misión</h2>
+        <p>Nuestra misión es convertirnos en el destino principal para los coleccionistas de figuras en todo el mundo, ofreciendo productos auténticos y de alta calidad, así como un servicio al cliente inigualable.</p>
 
-            <p> Queremos hacer promover la facilidad de dar servicio a aquellas personas que quieras obtener nuestro porducto y que tengan una facilidad a la hora de comprar y se sientan seguros <br>
-            Wanted va a ser una de las empresas mas seguras para los cliente sa la hora de recibir productos
-            </p>
+        <h2>El Equipo</h2>
+        <p>Somos un equipo apasionado de coleccionistas y entusiastas de la cultura pop. Nos dedicamos a buscar y traer las mejores figuras de colección para nuestros clientes. Con años de experiencia en el mercado, estamos comprometidos con la satisfacción del cliente y la excelencia en cada aspecto de nuestro negocio.</p>
 
-            <di class="pt-3">
-
-                <a href="/inicio" class="btn btn-primary ">Inicio </a>
-            </di>
-
+        <div class="row">
+            <div class="col-md-4">
+                <h3>Juan Pérez</h3>
+                <p>Fundador y CEO</p>
+                <p>Juan es un apasionado coleccionista de figuras de acción con más de 10 años de experiencia en la industria.</p>
+            </div>
+            <div class="col-md-4">
+                <h3>María García</h3>
+                <p>Gerente de Ventas</p>
+                <p>María tiene un gran conocimiento en la atención al cliente y se asegura de que cada cliente tenga una experiencia de compra satisfactoria.</p>
+            </div>
+            <div class="col-md-4">
+                <h3>Carlos López</h3>
+                <p>Jefe de Logística</p>
+                <p>Carlos es responsable de que todas las figuras lleguen a nuestros clientes en perfectas condiciones y a tiempo.</p>
+            </div>
         </div>
+
+        <h2>Contacto</h2>
+        <p>Si tienes alguna pregunta o comentario, no dudes en <a href="/contacto">contactarnos</a>. Estamos aquí para ayudarte y asegurarnos de que tengas la mejor experiencia posible en nuestra tienda.</p>
     </div>
-</div>
 
 </form>
 
