--- a/src/main/resources/templates/html/encabezado/caracteristicas.html
+++ b/src/main/resources/templates/html/encabezado/caracteristicas.html
@@ -2,12 +2,19 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml"><head>
     <meta charset="UTF-8">
     <title>Caracteristicas</title>
-    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="icon" href="/imagen/pestaña/corona.jpg">
+
     <link rel="stylesheet" href="/css/caja-boostrap.css">
-    <link rel="stylesheet" href="/css/cambiarColoCabezera.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="icon" href="/imagen/pestaña/corona.jpg" >
+    <link rel="stylesheet" href="/css/tabla.css">
+    <link rel="stylesheet" href="/css/carrusel.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/comprarCarrito.css">
+    <link rel="stylesheet" href="/css/cambiarColoCabezera.css">
+    <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
+    <link rel="icon" href="/imagen/pestaña/corona.jpg">
 </head>
 <body>
 <header class="p-3 bg-dark text-white fixed-top ">
@@ -115,7 +122,7 @@
 <div class="container-fluid" >
 
 
-<div class="card">
+<div class="card" style="margin-top: 60px">
 
     <div class="card-body">
 
@@ -264,5 +271,6 @@
 <script src="/js/buscar.js"></script>
 <script src="/js/favoritos.js"></script>
 <script src="/js/cambiarDeColorCabecera.js"></script>
+
 </body>
 </html>
