--- a/src/main/resources/templates/html/encabezado/precios.html
+++ b/src/main/resources/templates/html/encabezado/precios.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <title>Precios</title>
 
-    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="icon" href="/imagen/pestaña/corona.jpg">
+
     <link rel="stylesheet" href="/css/caja-boostrap.css">
-    <link rel="stylesheet" href="/css/cambiarColoCabezera.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="icon" href="/imagen/pestaña/corona.jpg" >
+    <link rel="stylesheet" href="/css/tabla.css">
+    <link rel="stylesheet" href="/css/carrusel.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/comprarCarrito.css">
+    <link rel="stylesheet" href="/css/cambiarColoCabezera.css">
+    <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
+    <link rel="icon" href="/imagen/pestaña/corona.jpg">
 </head>
-<body>   <header class="p-3 bg-dark text-white fixed-top ">
+<body>
+<header class="p-3 bg-dark text-white fixed-top " >
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -121,7 +129,7 @@
     <div class="card">
 
 
-        <div class="card-body">
+        <div class="card-body" style="margin-top: 100px">
 
             <h2> Pago de reservas</h2>
             <p>
