--- a/src/main/resources/templates/html/footer/centroDeSoporte.html
+++ b/src/main/resources/templates/html/footer/centroDeSoporte.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Faqs</title>
-    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+    <title>Centro de soporte</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="icon" href="/imagen/pestaña/corona.jpg">
+
     <link rel="stylesheet" href="/css/caja-boostrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/cambiarColoCabezera.css">
-    <link rel="icon" href="/imagen/pestaña/corona.jpg" >
+    <link rel="stylesheet" href="/css/tabla.css">
+    <link rel="stylesheet" href="/css/carrusel.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/comprarCarrito.css">
+    <link rel="stylesheet" href="/css/cambiarColoCabezera.css">
+    <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
 
 </head>
-<body>   <header class="p-3 bg-dark text-white fixed-top ">
+<body>
+<header class="p-3 bg-dark text-white fixed-top " >
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -111,80 +117,33 @@
     </div>
     </div>
 </header>
-<!--cambiar el th action con lo que ponga en el controlador-->
-<form th:action="@{/exit/faqs}" method="post">
 
-    <div class="container" style="margin-top: 110px;">
-        <h1>FAQs - Preguntas Frecuentes</h1>
+<div class="container" style="margin-top: 110px;">
+    <h1>Centro de soporte</h1>
+    <p>Bienvenido al centro de soporte. Aquí encontrarás respuestas a las preguntas más comunes y podrás contactar con nuestro equipo de soporte.</p>
 
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        ¿Cómo puedo realizar un pedido?
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        Para realizar un pedido, simplemente navega por nuestra tienda, añade los productos que deseas al carrito y procede al pago. Puedes crear una cuenta o hacer el pedido como invitado.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        ¿Cuáles son las opciones de envío disponibles?
-                    </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        Ofrecemos varias opciones de envío, incluidas las estándar y exprés. Los tiempos de entrega y los costos pueden variar según tu ubicación.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        ¿Puedo devolver un producto si no estoy satisfecho?
-                    </button>
-                </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        Sí, aceptamos devoluciones dentro de los 30 días posteriores a la compra. Asegúrate de que el producto esté en su estado original y ponte en contacto con nuestro centro de soporte para iniciar el proceso de devolución.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFour">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        ¿Qué métodos de pago aceptan?
-                    </button>
-                </h2>
-                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        Aceptamos varias formas de pago, incluidas tarjetas de crédito, PayPal y transferencias bancarias. Puedes ver todas las opciones de pago en el momento de realizar el pedido.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFive">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                        ¿Cómo puedo contactar con el servicio al cliente?
-                    </button>
-                </h2>
-                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        Puedes contactar con nuestro servicio al cliente a través de la página de <a href="/contacto">Contactar</a>. Estamos disponibles por correo electrónico, teléfono y chat en vivo.
-                    </div>
-                </div>
-            </div>
+    <h2>Preguntas frecuentes</h2>
+    <p>[Incluir aquí las preguntas frecuentes]</p>
+
+    <h2>Contacta con nosotros</h2>
+    <p>Si necesitas más ayuda, puedes enviarnos un mensaje utilizando el siguiente formulario.</p>
+
+
+        <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="nombre" name="nombre" required>
         </div>
-    </div>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+        </div>
+        <div class="mb-3">
+            <label for="mensaje" class="form-label">Mensaje</label>
+            <textarea class="form-control" id="mensaje" name="mensaje" rows="5" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
 
-</form>
-
-
-
+</div>
 <footer class="bg-dark text-white mt-4">
     <div class="container py-4">
         <div class="row">
@@ -195,20 +154,20 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <h5>Enlaces rápidos</h5>
                 <ul class="list-unstyled">
-                    <li><a href="/inicio" class="text-white">Inicio</a></li>
-                    <li><a href="/caracteristicas" class="text-white">Características</a></li>
-                    <li><a href="/pagoEnca" class="text-white">Precios</a></li>
-                    <li><a href="/faqs" class="text-white">FAQs</a></li>
-                    <li><a href="/encabezado" class="text-white">Acerca</a></li>
+                    <li><a th:href="@{/inicio}" class="text-white">Inicio</a></li>
+                    <li><a th:href="@{/caracteristicas}" class="text-white">Características</a></li>
+                    <li><a th:href="@{/pagoEnca}" class="text-white">Precios</a></li>
+                    <li><a th:href="@{/faqs}" class="text-white">FAQs</a></li>
+                    <li><a th:href="@{/encabezado}" class="text-white">Acerca</a></li>
                 </ul>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <h5>Soporte</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#" class="text-white">Centro de soporte</a></li>
-                    <li><a href="#" class="text-white">Devoluciones y Garantías</a></li>
-                    <li><a href="#" class="text-white">Contactar</a></li>
-                    <li><a href="#" class="text-white">Política de privacidad</a></li>
+                    <li><a th:href="@{/centroDeSoporte}" class="text-white">Centro de soporte</a></li>
+                    <li><a th:href="@{/devolucionesGarantias}" class="text-white">Devoluciones y Garantías</a></li>
+                    <li><a th:href="@{/contactar}" class="text-white">Contactar</a></li>
+                    <li><a th:href="@{/privacidad}" class="text-white">Política de privacidad</a></li>
                 </ul>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
@@ -229,6 +188,6 @@
 <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}" ></script>
 <script src="/js/buscar.js"></script>
 <script src="/js/favoritos.js"></script>
-    <script src="/js/cambiarDeColorCabecera.js"></script>
+<script src="/js/cambiarDeColorCabecera.js"></script>
 </body>
 </html>
