--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -9,48 +9,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/tabla.css">
     <link rel="stylesheet" href="/css/carrusel.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/comprarCarrito.css">
     <link rel="stylesheet" href="/css/cambiarColoCabezera.css">
     <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
     <link rel="icon" href="/imagen/pestaña/corona.jpg">
 
-    <style>
-        /* Estilo para el texto del nombre de usuario */
-
-        footer {
-            background-color: #343a40;
-            color: #ffffff;
-            padding: 20px 0;
-        }
-
-        footer h5 {
-            margin-bottom: 20px;
-        }
-
-        footer ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        footer ul li {
-            margin-bottom: 10px;
-        }
-
-        footer ul li a {
-            color: #ffffff;
-            text-decoration: none;
-            transition: color 0.2s;
-        }
-
-        footer ul li a:hover {
-            color: #f8f9fa;
-        }
-
-        footer .text-center {
-            border-top: 1px solid #495057;
-            margin-top: 20px;
-            padding-top: 20px;
-        }
+   <style>
 
 
 
@@ -71,7 +36,7 @@
 
 <body>
 
-    <header class="p-3 bg-dark text-white fixed-top ">
+    <header class="p-3 bg-dark text-white fixed-top " >
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -228,7 +193,7 @@
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 900px;">
 
-                                <a href="#" class="btn btn-primary py-md-3 px-md-5 mt-2"> Novedades</a>
+                                <a href="/Novedad" class="btn btn-primary py-md-3 px-md-5 mt-2"> Novedades</a>
                             </div>
                         </div>
                     </div>
@@ -269,13 +234,13 @@
         <div class="contenedor">
             <h1>Figuras Novedad</h1>
             <div class="figura-contenedor">
-                <div class="figura" th:each="figura: ${listaNovedad}">
-                    <a th:href="@{/detalle/{id}(id=${figura.id})}">
-                        <img th:src="${figura.url}" alt="imagen">
+                <div class="figura" th:each="novedad: ${listaNovedad}">
+                    <a th:href="@{/detalle/{id}(id=${novedad.id})}">
+                        <img th:src="${novedad.url}" alt="imagen">
                     </a>
-                    <h2 th:text="${figura.nombre}"></h2>
-                    <p th:text="${figura.arco?.nombre}"></p>
-                    <p>Precio: <span class="price" th:text="${figura.precio}"></span></p>
+                    <h2 th:text="${novedad.nombre}"></h2>
+                    <p th:text="${novedad.arco?.nombre}"></p>
+                    <p>Precio: <span class="price" th:text="${novedad.precio}"></span></p>
                 </div>
             </div>
         </div>
@@ -294,20 +259,20 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h5>Enlaces rápidos</h5>
                     <ul class="list-unstyled">
-                        <li><a href="/inicio" class="text-white">Inicio</a></li>
-                        <li><a href="/caracteristicas" class="text-white">Características</a></li>
-                        <li><a href="/pagoEnca" class="text-white">Precios</a></li>
-                        <li><a href="/faqs" class="text-white">FAQs</a></li>
-                        <li><a href="/encabezado" class="text-white">Acerca</a></li>
+                        <li><a th:href="@{/inicio}" class="text-white">Inicio</a></li>
+                        <li><a th:href="@{/caracteristicas}" class="text-white">Características</a></li>
+                        <li><a th:href="@{/pagoEnca}" class="text-white">Precios</a></li>
+                        <li><a th:href="@{/faqs}" class="text-white">FAQs</a></li>
+                        <li><a th:href="@{/encabezado}" class="text-white">Acerca</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h5>Soporte</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white">Centro de soporte</a></li>
-                        <li><a href="#" class="text-white">Devoluciones y Garantías</a></li>
-                        <li><a href="#" class="text-white">Contactar</a></li>
-                        <li><a href="#" class="text-white">Política de privacidad</a></li>
+                        <li><a th:href="@{/centroDeSoporte}" class="text-white">Centro de soporte</a></li>
+                        <li><a th:href="@{/devolucionesGarantias}" class="text-white">Devoluciones y Garantías</a></li>
+                        <li><a th:href="@{/contactar}" class="text-white">Contactar</a></li>
+                        <li><a th:href="@{/privacidad}" class="text-white">Política de privacidad</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
