--- a/src/main/resources/templates/html/novedad/index.html
+++ b/src/main/resources/templates/html/novedad/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/caja-boostrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/naruto.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
     <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 </head>
 
@@ -113,11 +115,11 @@
     </div>
 </header>
 
-<div class="contenedor">
+<div class="contenedor" style="margin-top: 100px">
     <h1>Novedades</h1>
     <div class="figura-contenedor">
-        <div class="figura" th:each="novedad: ${novedadFigura}">
-            <a th:href="@{/detalle/novedad/{id}(id=${novedad.id})}">
+        <div class="figura" th:each="novedad: ${listaNovedad}">
+            <a th:href="@{/detalle/{id}(id=${novedad.id})}">
                 <img th:src="${novedad.url}" alt="imagen">
             </a>
             <h2 th:text="${novedad.nombre}"></h2>
@@ -126,7 +128,6 @@
         </div>
     </div>
 </div>
-
 
 
 <footer class="bg-dark text-white mt-4">
