--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -19,8 +19,7 @@
 
 
 
-        /*
-                body {
+         /*       body {
                     background-image: url("https://wallpapers-clan.com/wp-content/uploads/2024/03/dragon-ball-goku-sparks-gif-preview-desktop-wallpaper.gif");
                     background-size: cover; !* Asegura que la imagen cubra toda el área del fondo *!
                     background-position: center; !* Centra la imagen *!
@@ -28,8 +27,8 @@
                     background-attachment: fixed; !* Hace que la imagen de fondo permanezca fija *!
                     height: 100vh; !* Asegura que el cuerpo tenga al menos la altura de la ventana *!
                     margin: 0; !* Elimina márgenes alrededor del cuerpo *!
-                }*/
-
+                }
+*/
 
     </style>
 
